--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,8 @@ binary_next_line = true
 
 [{Makefile,**.mk}]
 indent_style = tab
+
+[*.md]
+max_line_length = 79
+indent_style = space
+indent_size = 2
